tests/ui/layout/layout-cycle.stderr
error[E0391]: cycle detected when computing layout of `S<S<()>>`
   |
   = note: ...which requires computing layout of `<S<()> as Tr>::I`...
   = note: ...which again requires computing layout of `S<S<()>>`, completing the cycle
note: cycle used when const-evaluating + checking `core::mem::SizedTypeProperties::SIZE_IN_BYTES`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0080]: evaluation of `<S<S<()>> as std::mem::SizedTypeProperties>::SIZE_IN_BYTES` failed
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: a cycle occurred during layout computation

note: erroneous constant encountered
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

note: erroneous constant encountered
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: the above error was encountered while instantiating `fn std::mem::size_of::<S<S<()>>>`
  --> $DIR/layout-cycle.rs:26:5
   |
LL |     mem::size_of::<S<T>>()
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0391.
For more information about an error, try `rustc --explain E0080`.
